--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,18 @@
+html, body {
+	width: 100%;
+	height: 100%;
+}
 body {
 	margin: 0;
 }
 
+.main-wrapper {
+	width: 100%;
+	height: 100%;
+}
 .main img {
-	width: 300px;
-	height: 300px;
+	width: 150px;
+	height: 150px;
 }
 .socials a {
 	display: inline;
