--- a/styles/list.css
+++ b/styles/list.css
@@ -1,5 +1,18 @@
+html, body {
+	width: 100%;
+	height: 100%;
+}
 body {
 	margin: 0;
+}
+
+.main-wrapper {
+	width: 100%;
+	height: 100%;
+}
+.hotel-list-item img {
+	width: 250px;
+	height: 25-px;
 }
 .socials a {
 	display: inline;
