--- a/styles/payment.css
+++ b/styles/payment.css
@@ -1,7 +1,19 @@
+html, body {
+	width: 100%;
+	height: 100%;
+}
 body {
 	margin: 0;
 }
 
+.main img {
+	width: 500px;
+	height: 500px;
+}
+.main-wrapper {
+	width: 100%;
+	height: 100%;
+}
 .socials a {
 	display: inline;
 }
