--- a/styles/detail.css
+++ b/styles/detail.css
@@ -5,12 +5,37 @@ html, body {
 body {
 	margin: 0;
 	background-color: #e0e0e0;
+	font-family: ubuntu;
+}
+a {
+	text-decoration: none;
+	color: black;
+	font-weight: 600;
 }
 header {
 	background-color: rosybrown;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: fixed;
+	width: 100%;
+	top: 0;
+}
+header a {
+	margin-right: 1%;
 }
 footer {
 	background-color: rosybrown;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 60px;
+	position: fixed;
+	width: 100%;
+	bottom: 0;
+}
+footer p {
+	align-self: flex-end;
 }
 
 form {
@@ -18,6 +43,10 @@ form {
 }
 .main {
 	margin: 2% 4% 2% 4%;
+	padding: 60px 0;
+}
+.main {
+	padding: 60px 0;
 }
 .main img {
 	height: 500px;
