--- a/styles/list.css
+++ b/styles/list.css
@@ -5,19 +5,61 @@ html, body {
 body {
 	margin: 0;
 	background-color: #e0e0e0;
+	font-family: ubuntu;
+}
+a {
+	text-decoration: none;
+	color: black;
+	font-weight: 600;
 }
 header {
 	background-color: rosybrown;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: fixed;
+	width: 100%;
+	top: 0;
+}
+header a {
+	margin-right: 1%;
 }
 footer {
 	background-color: rosybrown;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 60px;
+	position: fixed;
+	width: 100%;
+	bottom: 0;
+}
+footer p {
+	align-self: flex-end;
 }
 
 .main-wrapper {
 	width: 100%;
 	height: 100%;
 }
+.main {
+	padding: 60px 0;
+}
+.main ul {
+	text-align: center;
+	list-style-type: none;
+	margin-right: 14%;
+}
+.main ul li {
+	display: inline;
+	margin: 0 1%;
+}
+.hotel-list {
+	display: flex;
+	flex-wrap: wrap;
+}
 .hotel-list-item {
+	flex: 1 0 45%;
 	margin: 2%;
 	background-color: rgb(132, 136, 139);
 	max-width: 40%;
