--- a/styles/payment.css
+++ b/styles/payment.css
@@ -5,12 +5,37 @@ html, body {
 body {
 	margin: 0;
 	background-color: #e0e0e0;
+	font-family: ubuntu;
+}
+a {
+	text-decoration: none;
+	color: black;
+	font-weight: 600;
 }
 header {
 	background-color: rosybrown;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: fixed;
+	width: 100%;
+	top: 0;
+}
+header a {
+	margin-right: 1%;
 }
 footer {
 	background-color: rosybrown;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 60px;
+	position: fixed;
+	width: 100%;
+	bottom: 0;
+}
+footer p {
+	align-self: flex-end;
 }
 
 .content {
@@ -27,6 +52,9 @@ footer {
 	border: 1px solid black;
 	padding: 1% 2%;
 	border-radius: 5px;
+}
+.main {
+	padding: 60px 0;
 }
 .main img {
 	width: 500px;
