--- a/styles/loader.css
+++ b/styles/loader.css
@@ -5,6 +5,16 @@
 	border-top: 12px solid #444444;
 	border-radius: 50%;
 	position: fixed;
+	animation: loading 1s linear infinite;
+}
+
+@keyframes loading {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
 
 .main-wrapper {
