--- a/styles/list.css
+++ b/styles/list.css
@@ -1,27 +1,4 @@
-
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/materialicons/v126/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
-}
-
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
-}
-
+/* Styling for the global elements */
 html, body {
 	width: 100%;
 	height: 100%;
@@ -78,6 +55,7 @@ footer p {
 	margin: 0 1%;
 }
 
+/* Styling for the modals */
 .form-item {
 	margin: 4% 8%;
 	display: flex;
@@ -110,6 +88,8 @@ footer p {
 	width: 250px;
 	height: 250px;
 }
+
+/* Social icons present in the footer */
 .socials a {
 	display: inline;
 }
